# django-hyperview

./: .ai-jail  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.context/agents/: architect-specialist.md  backend-specialist.md  bug-fixer.md  code-reviewer.md  database-specialist.md  devops-specialist.md  documentation-writer.md  feature-developer.md  performance-optimizer.md  refactoring-specialist.md  security-auditor.md  test-writer.md
.context/docs/: README.md  architecture.md  data-flow.md  development-workflow.md  glossary.md  project-overview.md  security.md  testing-strategy.md  tooling.md
.context/harness/: policy.json  sensors.json
.context/skills/: README.md
.context/skills/api-design/: SKILL.md
.context/skills/bug-investigation/: SKILL.md
.context/skills/code-review/: SKILL.md
.context/skills/commit-message/: SKILL.md
.context/skills/documentation/: SKILL.md
.context/skills/feature-breakdown/: SKILL.md
.context/skills/pr-review/: SKILL.md
.docs/: DJANGO-SETUP.md  HYPERVIEW.md
accounts/migrations/: 0001_initial.py
core/: settings.py  urls.py
core/base_models/: __init__.py  mixins.py  models.py
docs/: HYPERVIEW.md
hv/: apps.py  tests.py  urls.py  views.py
templates/: base.html  home.html
templates/hv/: about.xml  base.xml  delete.xml  detail.xml  form.xml  home.xml  index.xml  list.xml  list_items.xml  login.xml  logout.xml  profile.xml  profile_edit.xml  settings.xml  share.xml
templates/registration/: login.html
(+13 files in other folders)
