[project]
name = "django-hyperview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "django>=5.2,<6.0",
    "django-extensions>=4.1",
    "django-htmx>=1.27.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.7",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
# Tasks via Docker - Funcionam em qualquer ambiente
css-build = { cmd = "docker compose exec web tailwindcss -i /code/core/static/core/css/input.css -o /code/core/static/core/css/output.css --minify", help = "Build Tailwind CSS for production via Docker" }
css-watch = { cmd = "docker compose exec web tailwindcss -i /code/core/static/core/css/input.css -o /code/core/static/core/css/output.css --watch", help = "Watch and rebuild Tailwind CSS via Docker" }
css-dev = { cmd = "docker compose exec web tailwindcss -i /code/core/static/core/css/input.css -o /code/core/static/core/css/output.css", help = "Build Tailwind CSS for development via Docker" }

[tool.uv.workspace]
members = [
    "django-hyperview",
]
